@@ -35,6 +35,7 @@ import uk.gov.hmcts.reform.civil.service.DocUploadDashboardNotificationService;
 import uk.gov.hmcts.reform.civil.service.GaForLipService;
 import uk.gov.hmcts.reform.civil.service.GeneralAppLocationRefDataService;
 import uk.gov.hmcts.reform.civil.utils.DocUploadUtils;
+import uk.gov.hmcts.reform.civil.utils.JudicialDecisionNotificationUtil;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 
@@ -42,7 +43,6 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -60,6 +60,7 @@ import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.MID;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESPOND_TO_APPLICATION;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESPOND_TO_APPLICATION_URGENT_LIP;
 import static uk.gov.hmcts.reform.civil.enums.GADebtorPaymentPlanGAspec.PAYFULL;
 import static uk.gov.hmcts.reform.civil.enums.GARespondentDebtorOfferOptionsGAspec.ACCEPT;
 import static uk.gov.hmcts.reform.civil.enums.GARespondentDebtorOfferOptionsGAspec.DECLINE;
@@ -106,8 +107,8 @@ public class RespondToApplicationHandler extends CallbackHandler {
         "The date entered cannot be in the past.";
 
     public static final String PREFERRED_TYPE_IN_PERSON = "IN_PERSON";
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(RESPOND_TO_APPLICATION);
-
+    private static final List<CaseEvent> EVENTS =
+        List.of(RESPOND_TO_APPLICATION, RESPOND_TO_APPLICATION_URGENT_LIP);
 
     @Override
     protected Map<String, Callback> callbacks() {
@@ -193,10 +194,11 @@ public class RespondToApplicationHandler extends CallbackHandler {
         UserInfo userInfo = idamClient.getUserInfo(callbackParams.getParams().get(BEARER_TOKEN).toString());
 
         List<Element<GARespondentResponse>> respondentResponse = caseData.getRespondentsResponses();
-
+        boolean isNotAllowedForLip =
+            gaForLipService.isLipResp(caseData) && JudicialDecisionNotificationUtil.isUrgent(caseData);
         List<String> errors = new ArrayList<>();
         if (caseData.getCcdState() == CaseState
-            .APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION
+            .APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION && !isNotAllowedForLip
         ) {
             errors.add(APPLICATION_RESPONSE_PRESENT);
         }
@@ -377,7 +379,9 @@ public class RespondToApplicationHandler extends CallbackHandler {
 
         // civil claim claimant
         if (!gaCaseData.getParentClaimantIsApplicant().equals(YES)
-            && userInfo.getSub().equals(civilCaseData.getApplicantSolicitor1UserDetails().getEmail())) {
+            && (Objects.nonNull(civilCaseData.getApplicantSolicitor1UserDetails())
+            && userInfo.getSub().equals(civilCaseData.getApplicantSolicitor1UserDetails().getEmail())
+            || gaForLipService.isLipResp(gaCaseData))) {
 
             log.info("Return Civil Claim Defendant two party Name if GA Solicitor Email ID "
                          + "as same as Civil Claim Claimant Solicitor Two Email");
